@@ -1,6 +1,10 @@
 Changes for tpop3d
 $Id$
 
+Removed the test which ignored messages in a maildir having modification times
+in the future, replacing it with a warning about possible clock synchronisation
+errors, following a suggestion of Matthew Trent.
+
 1.5.3
 
 Fixed a couple of errors in the man page and configuration directives which
